--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-usa-map": "^1.5.0",
+    "swr": "^0.3.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
