--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "framer-motion": "^2.9.4",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "react-usa-map": "^1.5.0",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.10",
     "swr": "^0.3.8",
     "web-vitals": "^0.2.4"
   },
