--- a/package.json
+++ b/package.json
@@ -9,15 +9,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "framer-motion": "^2.9.4",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "normalize.css": "^8.0.1",
-    "prettier": "^2.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "react-simple-maps": "^2.3.0",
-    "react-tooltip": "^4.2.10",
+    "react-usa-map": "^1.5.0",
     "swr": "^0.3.8",
     "web-vitals": "^0.2.4"
   },
@@ -31,16 +26,6 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
     ]
   },
   "browserslist": {
